<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_Explorar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Explorar" />
        <item
            android:id="@+id/nav_Buscar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Buscar" />
        <item
            android:id="@+id/nav_Notificaciones"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Notificaciones" />
        <item
            android:id="@+id/nav_Carrito"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Carrito" />
        <item
            android:id="@+id/nav_Historial"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Historial" />
        <item
            android:id="@+id/nav_Servicio"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Servicio" />
        <item
            android:id="@+id/nav_Preguntas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Preguntas" />
        <item
            android:id="@+id/nav_Configuracion"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Configuracion" />
    </group>
</menu>