<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="buy_now.company.contenedor.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="buy_now.company.contenedor.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="buy_now.company.contenedor.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_Explorar"
        android:name="buy_now.company.contenedor.ui.explorar.ExplorarFragment"
        android:label="@string/menu_Explorar"
        tools:layout="@layout/fragment_explorar" />

    <fragment
        android:id="@+id/nav_Buscar"
        android:name="buy_now.company.contenedor.ui.buscar.BuscarFragment"
        android:label="@string/menu_Buscar"
        tools:layout="@layout/fragment_buscar" />

    <fragment
        android:id="@+id/nav_Notificaciones"
        android:name="buy_now.company.contenedor.ui.notificaciones.NotificacionesFragment"
        android:label="@string/menu_Notificaciones"
        tools:layout="@layout/fragment_notificaciones" />

    <fragment
        android:id="@+id/nav_Carrito"
        android:name="buy_now.company.contenedor.ui.carrito.CarritoFragment"
        android:label="@string/menu_Carrito"
        tools:layout="@layout/fragment_carrito" />

    <fragment
        android:id="@+id/nav_Historial"
        android:name="buy_now.company.contenedor.ui.historial.HistorialFragment"
        android:label="@string/menu_Historial"
        tools:layout="@layout/fragment_historial" />

    <fragment
        android:id="@+id/nav_Servicio"
        android:name="buy_now.company.contenedor.ui.servicio.ServicioFragment"
        android:label="@string/menu_Servicio"
        tools:layout="@layout/fragment_servicio" />

    <fragment
        android:id="@+id/nav_Preguntas"
        android:name="buy_now.company.contenedor.ui.preguntas.PreguntasFragment"
        android:label="@string/menu_Preguntas"
        tools:layout="@layout/fragment_preguntas" />

    <fragment
        android:id="@+id/nav_Configuracion"
        android:name="buy_now.company.contenedor.ui.configuracion.ConfiguracionFragment"
        android:label="@string/menu_Configuracion"
        tools:layout="@layout/fragment_configuracion" />
</navigation>